tests/compError/a_in_a.iota
// compError
// error: recursive definition!
// line:5 -> here

a = a
a